--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,10 +18,13 @@
 ### Autostart ###
 #################
 exec_always --no-startup-id setxkbmap pt
+exec_always --no-startup-id picom
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh i3-bar
 exec_always --no-startup-id nitrogen --restore
+exec_always --no-startup-id autotiling
 exec --no-startup-id blueman-applet
 exec --no-startup-id nm-applet
+
 
 ###################
 ### i3 settings ###
