--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -26,6 +26,7 @@ inactive-opacity-override = false;
 opacity-rule = [
   "90:class_g  = 'Polybar'",
   "100:class_g  = 'Firefox'",
+  "100:class_g = 'firefox'",
   "100:class_g = 'discord'",
   "100:class_g  = 'Zathura'",
   "100:class_g = 'Thunderbird'",
