--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,29 +15,17 @@
 # Picom compositor config
 
 # General settings
-backend = "xrender";
+backend = "glx";
 
 # Opacity
-active-opacity = 0.95;
+active-opacity = 0.98;
 inactive-opacity = 0.8;
-frame-opacity = 0.7;
 inactive-opacity-override = false;
 
 opacity-rule = [
   "90:class_g  = 'Polybar'",
-  "100:class_g  = 'Firefox'",
+  "100:class_g = 'Firefox'",
   "100:class_g = 'firefox'",
   "100:class_g = 'discord'",
-  "100:class_g  = 'Zathura'",
-  "100:class_g = 'Thunderbird'",
+  "100:class_g = 'Zathura'",
 ];
-
-# Blur
-blur: {
-  method = "dual_kawase";
-  strength = 8;
-  background = true;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
-}
