--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -37,6 +37,7 @@ width = 100%
 height = 20
 fixed-center = true 
 enable-ipc = true
+padding-right = 2
 
 background = ${colors.background}
 foreground = ${colors.foreground}
@@ -103,7 +104,7 @@ time = %H:%M
 label = %time% %date%
 date-alt = %A, %d %B %Y
 time-alt = %H:%M
-format =  <label>
+format = <label> 
 
 
 [module/battery]
