--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -18,14 +18,15 @@
 backend = "glx";
 
 # Opacity
-active-opacity = 0.98;
+active-opacity = 0.95;
 inactive-opacity = 0.8;
 inactive-opacity-override = false;
 
 opacity-rule = [
   "90:class_g  = 'Polybar'",
-  "100:class_g = 'Firefox'",
-  "100:class_g = 'firefox'",
-  "100:class_g = 'discord'",
-  "100:class_g = 'Zathura'",
+  "98:class_g  = 'jetbrains-clion' && focused",
+  "100:class_g = 'Firefox' && focused",
+  "100:class_g = 'firefox' && focused",
+  "100:class_g = 'discord' && focused",
+  "100:class_g = 'Zathura' && focused",
 ];
