--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -74,7 +74,8 @@ label-mode-background = ${colors.color8}
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%
-label-focused-background = ${colors.color4}
+label-focused-background = ${colors.color2}
+label-focused-foreground = ${colors.background}
 label-focused-padding = 2
 
 ; unfocused = Inactive workspace on any monitor
@@ -83,7 +84,8 @@ label-unfocused-padding = 2
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%
-label-visible-background = ${colors.color8} 
+label-visible-background = ${colors.foreground} 
+label-visible-foreground = ${colors.background} 
 label-visible-padding = 2
 
 ; urgent = Workspace with urgency hint set
